[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bellhop"
description = "Classy solution for file uploads in Django. Inspired by CarrierWave."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name="Shubham Sharma", email="sharshub@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=3.2",
    "boto3>=1.26"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/sharshub/bellhop"
"Bug Tracker" = "https://github.com/sharshub/bellhop/issues"

[tool.hatch.version]
path = "bellhop/__init__.py"
